--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
           <p> I'm a PhD candidate in the <a href="https://en-humanities.tau.ac.il/linguistics" target="_blank">Linguistics Department</a> at Tel Aviv University, advised by <a href="https://english.tau.ac.il/profile/horvath" target="_blank">Julia Horvath</a>. </p>
 
-          <p> My research is in theoretical syntax and psycholinguistics. I am interested in the representation of grammatical knowledge, particularly, how it applies to bilingual behaviour, and how it is used during sentence comprehension.</p>
+          <p> My research is in theoretical syntax and psycholinguistics. I am interested in the representation of grammatical knowledge, specifically its application to bilingual behavior and its role in sentence processing.</p>
 
           <p> In my dissertation, I study syntactic constraints on bilingual code-switching.  I am interested in the division of labour between grammatical modules and the content of the lexicon, and focus on cyclicity, agreement, and movement in intra-sentential code-switching. My research is based on data from Hebrew-English bilinguals collected using psycholinguistic methods.</p>
 
