--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="default.css">
+    <meta name="google-site-verification" content="p7xctf7SRFzqorqnDCDFKaPoc167YPvxxG_qPEMldR8" />
   </head>
 
   <body>
