--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
-            <li><a href="PDF/Cartner_CV_2024_Apr.pdf" target="_blank">CV</a></li>
+            <li><a href="PDF/Cartner_CV_Apr_2024.pdf" target="_blank">CV</a></li>
           </ul>
         </nav>
       </section>
