--- a/research.html
+++ b/research.html
@@ -45,6 +45,15 @@
 
 <h4>Peer-Reviewed Presentations</h4>
 
+
+<p>
+  A transient binding model of interference in sentence processing. Keshev, M., Cartner, M., Meltzer-Asscher, A. and Dillon, B. Talk at the annual conference on Human Sentence Processing, University of Michigan, May 16-18, 2024. 
+</p>
+
+<p>
+Canonical argument alignment modulates gap, but not RP, acceptability in English. Kogan, M., Cartner, M., Sichel, I., Toosarvandani, M., and Wagers, M. Poster at the annual conference on Human Sentence Processing, University of Michigan, May 16- 18, 2024.
+</p>
+
 <p>
   Grammatical gender agreement in bilingual code-switching: Representational and processing considerations. Cartner, M., Meltzer-Asscher, A. and Horvath, J. Architectures and Mechanisms for Language Processing 29, Aug 31-Sep 2, 2023. (<a href="PDF/Cartner_et_al_2023_AMLaP_Agr.pdf" target="_blank">poster</a>)
 </p>
@@ -83,6 +92,14 @@
 
 
 <h4>Other Presentations</h4>
+
+<p>
+Amelioration by resumptive pronouns: Relating processing and acceptability. Cartner, M., Wagers, M., Toosravandani, M. and Sichel, I. (Resumptive) Pronouns between grammar and processing, UC Santa Cruz, May 11, 2024.
+</p>
+
+<p>
+Animacy effects in object relativization and the theory of Agree. Sichel, I., Toosravandani, M., Cartner, M., and Wagers, M. (Resumptive) Pronouns between grammar and processing, UC Santa Cruz, May 11, 2024.
+</p>
 
 <p>
   Cataphora resolution along a filler-gap dependency: SPR vs. G-Maze. Cartner, M. Talk at the Syntax, Semantics and Language Processing Lab, UC Santa Cruz, May 11, 2023.
