--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
-            <li><a href="PDF/Cartner_CV_Apr_2024.pdf" target="_blank">CV</a></li>
+            <li><a href="PDF/Cartner_CV_Jul2024_web.pdf" target="_blank">CV</a></li>
           </ul>
         </nav>
       </section>
@@ -38,7 +38,11 @@
 <h3>Journal Articles</h3>
 
 <p>
-  Katz, Y. Z., Cartner, M., and Siloni, T. 2021. Garden Path: Reanalysis as Last Resort. <em>Language and Brain</em> 15, pp. 1-14. In Hebrew. (<a href="https://www.language-brain.com/journal/docs/Katz_Cartner_Siloni_LanguageBrain15_GardenPath.pdf" target="_blank">PDF</a>) 
+  Keshev, M., Cartner, M., Meltzer-Asscher, A., and Dillon, B. (2024). A transient binding model of interference in sentence processing. In Proceedings of <em>the Annual Meeting of the Cognitive Science Society</em>. (<a href="PDF/CogSci_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">PDF</a>)
+</p>
+
+<p>
+  Katz, Y. Z., Cartner, M., and Siloni, T. (2021). Garden Path: Reanalysis as Last Resort. <em>Language and Brain</em>. (<a href="https://www.language-brain.com/journal/docs/Katz_Cartner_Siloni_LanguageBrain15_GardenPath.pdf" target="_blank">PDF</a>) 
 </p>
 
 <h3>Presentations and Posters</h3>
