--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
-            <li><a href="PDF/Mandy Cartner_CV_May2024_web.pdf" target="_blank">CV</a></li>
+            <li><a href="PDF/Cartner_CV_Jul2024_web.pdf" target="_blank">CV</a></li>
           </ul>
         </nav>
       </section>
