--- a/research.html
+++ b/research.html
@@ -35,7 +35,7 @@
 
 <h2> Publications and presentations </h2>
 
-<h3>Journal Articles</h3>
+<h3>Papers</h3>
 
 <p>
   Keshev, M., Cartner, M., Meltzer-Asscher, A., and Dillon, B. (2024). A transient binding model of interference in sentence processing. In Proceedings of <em>the Annual Meeting of the Cognitive Science Society</em>. (<a href="PDF/CogSci_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">PDF</a>)
@@ -48,6 +48,10 @@
 <h3>Presentations and Posters</h3>
 
 <h4>Peer-Reviewed Presentations</h4>
+
+<p>
+  A working memory model of sentence processing as binding morphemes to syntactic positions. Keshev, M., Cartner, M., Meltzer-Asscher, A. and Dillon, B. Talk at the 46th Annual Meeting of the Cognitive Science Society, Rotterdam, July 24-27, 2024.
+</p>
 
 
 <p>
