--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <p> <b>Contact:</b> mandycartner@mail.tau.ac.il </p>
 
       <section class="footer">
-        Last updated: 24 May 2024
+        Last updated: July 2024
       </section>
 
         </div>
