--- a/research.html
+++ b/research.html
@@ -38,7 +38,7 @@
 <h3>Papers</h3>
 
 <p>
-  Keshev, M., Cartner, M., Meltzer-Asscher, A., and Dillon, B. (2024). A transient binding model of interference in sentence processing. In Proceedings of <em>the Annual Meeting of the Cognitive Science Society</em>. (<a href="PDF/CogSci_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">PDF</a>)
+  Keshev, M., Cartner, M., Meltzer-Asscher, A., and Dillon, B. (2024). A working memory model of sentence processing as binding morphemes to syntactic positions. In Proceedings of <em>the Annual Meeting of the Cognitive Science Society</em>. (<a href="PDF/CogSci_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">PDF</a>)
 </p>
 
 <p>
@@ -95,7 +95,7 @@ Canonical argument alignment modulates gap, but not RP, acceptability in English
 </p>
 
 <p>
-  Processing multiple dependencies: Predicates' and reflexive pronouns' agreement features Keshev, M., Cartner, M. and Meltzer-Asscher, A. Talk at the Linguistic Illusions in Sentence Processing workshop, University of Konstanz, Sept 13-14, 2021.
+  Processing multiple dependencies: Predicates' and reflexive pronouns' agreement features. Keshev, M., Cartner, M. and Meltzer-Asscher, A. Talk at the Linguistic Illusions in Sentence Processing workshop, University of Konstanz, Sept 13-14, 2021.
 </p>
 
 
