--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
-            <li><a href="PDF/Cartner_CV_Jul2024_web.pdf" target="_blank">CV</a></li>
+            <li><a href="PDF/Cartner_CV_Sep2024_web.pdf" target="_blank">CV</a></li>
           </ul>
         </nav>
       </section>
@@ -48,6 +48,10 @@
 <h3>Presentations and Posters</h3>
 
 <h4>Peer-Reviewed Presentations</h4>
+
+<p>
+Representational agreement attraction: Evidence from illusory feature conjunction in Hebrew. Cartner, M., Keshev, M., Lipitz, S., Dillon, B. and Meltzer-Asscher, A. Talk at Architectures and Mechanisms for Language Processing 30, Edinburgh, Sep 5-7, 2024. (<a href="PDF/Cartner_et_al_2024_AMLaP_Attr" target="_blank">Slides</a>)
+</p>
 
 <p>
   A working memory model of sentence processing as binding morphemes to syntactic positions. Keshev, M., Cartner, M., Meltzer-Asscher, A. and Dillon, B. Talk at the 46th Annual Meeting of the Cognitive Science Society, Rotterdam, July 24-27, 2024.
