--- a/research.html
+++ b/research.html
@@ -50,7 +50,7 @@
 <h4>Peer-Reviewed Presentations</h4>
 
 <p>
-Representational agreement attraction: Evidence from illusory feature conjunction in Hebrew. Cartner, M., Keshev, M., Lipitz, S., Dillon, B. and Meltzer-Asscher, A. Talk at Architectures and Mechanisms for Language Processing 30, Edinburgh, Sep 5-7, 2024. (<a href="PDF/Cartner_et_al_2024_AMLaP_Attr" target="_blank">Slides</a>)
+Representational agreement attraction: Evidence from illusory feature conjunction in Hebrew. Cartner, M., Keshev, M., Lipitz, S., Dillon, B. and Meltzer-Asscher, A. Talk at Architectures and Mechanisms for Language Processing 30, Edinburgh, Sep 5-7, 2024. (<a href="PDF/Cartner_et_al_2024_AMLaP_Attr.pdf" target="_blank">Slides</a>)
 </p>
 
 <p>
