poster and margin

--- a/research.html
+++ b/research.html
@@ -50,7 +50,11 @@
 <h4>Peer-Reviewed Presentations</h4>
 
 <p>
-Representational agreement attraction: Evidence from illusory feature conjunction in Hebrew. Cartner, M., Keshev, M., Lipitz, S., Dillon, B. and Meltzer-Asscher, A. Talk at Architectures and Mechanisms for Language Processing 30, Edinburgh, Sep 5-7, 2024. (<a href="PDF/Cartner_et_al_2024_AMLaP_Attr.pdf" target="_blank">Slides</a>)
+Representational agreement attraction: Evidence from illusory feature conjunction in Hebrew. Cartner, M., Keshev, M., Lipitz, S., Dillon, B. and Meltzer-Asscher, A. Talk at Architectures and Mechanisms for Language Processing 30, Edinburgh, Sep 5-7, 2024. (<a href="PDF/Cartner_et_al_2024_AMLaP_Attr.pdf" target="_blank">slides</a>)
+</p>
+
+<p>
+  Subject islands are not caused by information structure clashes: Evidence from topicalization. Webster, N., Kogan, M., Cartner, M., Wagers, M. and Sichel, I. Poster at Architectures and Mechanisms for Language Processing 30, Edinburgh, Sep 5-7, 2024. (<a href="PDF/Webster_et_al_2024_AMLaP_islands.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
