--- a/index.html
+++ b/index.html
@@ -15,14 +15,7 @@
 
     <section class="content">
 
-      <section class="left-image">
-          <img src="IMG/Mandy2024.jpg" alt=".">
-        </section>
-
-
-      <section class="section-content">
-
-        <section class="banner">
+      <section class="banner">
           <h1> <a href="index.html">Mandy Cartner</a> </h1>
       </section>
 
@@ -37,21 +30,29 @@
         </nav>
       </section>
 
-        <div class="details">
+      <div class="details">
+        
+        <section class="left-image">
+         <img src="IMG/Mandy2024.jpg" alt=".">
+        </section>
 
+        <section class="text">
           <p> I'm a PhD candidate in the <a href="https://en-humanities.tau.ac.il/linguistics" target="_blank">Linguistics Department</a> at Tel Aviv University, advised by <a href="https://english.tau.ac.il/profile/horvath" target="_blank">Julia Horvath</a>. </p>
 
           <p> My research is in theoretical syntax and psycholinguistics. I am interested in the representation of grammatical knowledge, specifically its application to bilingual behavior and its role in sentence processing.</p>
 
-          <p> In my dissertation, I study syntactic constraints on bilingual code-switching.  I am interested in the division of labour between grammatical modules and the content of the lexicon, and focus on cyclicity, agreement, and movement in intra-sentential code-switching. My research is based on data from Hebrew-English bilinguals collected using psycholinguistic methods.</p>
+          <p> In my dissertation, I study syntactic constraints on bilingual code-switching. I am interested in the division of labour between grammatical modules and the content of the lexicon, and focus on cyclicity, agreement, and movement in intra-sentential code-switching. My research is based on data from Hebrew-English bilinguals collected using psycholinguistic methods.</p>
 
           <p> <b>Contact:</b> mandycartner@mail.tau.ac.il </p>
+        </section>
 
-      <section class="footer">
-        Last updated: September 2024
-      </section>
+      </div>
 
-        </div>
+    </section>
+
+    <section class="footer">
+          Last updated: September 2024
+        </section>
 
 
   </body>
