--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
-            <li><a href="PDF/Cartner_CV_Sep2024_web.pdf" target="_blank">CV</a></li>
+            <li><a href="PDF/Cartner_CV_Oct2024_web.pdf" target="_blank">CV</a></li>
           </ul>
         </nav>
       </section>
@@ -106,6 +106,9 @@ Canonical argument alignment modulates gap, but not RP, acceptability in English
 
 <br>
 <h2>Other Presentations</h2>
+
+<p> The bilingual lexicon under Distributed Morphology: An Investigation of gender agreement in code-switching. Cartner, M., Meltzer-Asscher, A. and Horvath, J. Israel Association for Theoretical Linguistics workshop. Tel Aviv, October 28, 2024. (<a href="PDF/Cartner_et_al_2024_IATL.pdf" target="_blank">slides</a>)
+</p>
 
 <p>
 Amelioration by resumptive pronouns: Relating processing and acceptability. Cartner, M., Wagers, M., Toosravandani, M. and Sichel, I. (Resumptive) Pronouns between grammar and processing, UC Santa Cruz, May 11, 2024.
