--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
-            <li><a href="PDF/Cartner_CV_Oct2024_web.pdf" target="_blank">CV</a></li>
+            <li><a href="PDF/Cartner_CV_Dec2024_web.pdf" target="_blank">CV</a></li>
           </ul>
         </nav>
       </section>
@@ -37,7 +37,7 @@
 <h2>Papers</h2>
 
 <p>
-  Keshev, M., Cartner, M., Meltzer-Asscher, A., and Dillon, B. (2024). A working memory model of sentence processing as binding morphemes to syntactic positions. In Proceedings of <em>the Annual Meeting of the Cognitive Science Society</em>. (<a href="PDF/CogSci_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">PDF</a>)
+  Keshev, M., Cartner, M., Meltzer‐Asscher, A., and Dillon, B. (2024). A working memory model of sentence processing as binding morphemes to syntactic positions. <em>Topics in Cognitive Science</em>. (<a href="PDF/TopiCS_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">PDF</a>)
 </p>
 
 <p>
@@ -57,7 +57,7 @@ Representational agreement attraction: Evidence from illusory feature conjunctio
 </p>
 
 <p>
-  A working memory model of sentence processing as binding morphemes to syntactic positions. Keshev, M., Cartner, M., Meltzer-Asscher, A. and Dillon, B. Talk at the 46th Annual Meeting of the Cognitive Science Society, Rotterdam, July 24-27, 2024.
+  A working memory model of sentence processing as binding morphemes to syntactic positions. Keshev, M., Cartner, M., Meltzer-Asscher, A. and Dillon, B. Talk at the 46th Annual Meeting of the Cognitive Science Society, Rotterdam, July 24-27, 2024. (<a href="PDF/CogSci_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">proceedings</a>)
 </p>
 
 
@@ -70,31 +70,31 @@ Canonical argument alignment modulates gap, but not RP, acceptability in English
 </p>
 
 <p>
-  Grammatical gender agreement in bilingual code-switching: Representational and processing considerations. Cartner, M., Meltzer-Asscher, A. and Horvath, J. Architectures and Mechanisms for Language Processing 29, Aug 31-Sep 2, 2023. (<a href="PDF/Cartner_et_al_2023_AMLaP_Agr.pdf" target="_blank">poster</a>)
+  Grammatical gender agreement in bilingual code-switching: Representational and processing considerations. Cartner, M., Meltzer-Asscher, A. and Horvath, J. Poster at Architectures and Mechanisms for Language Processing 29, Aug 31-Sep 2, 2023. (<a href="PDF/Cartner_et_al_2023_AMLaP_Agr.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-  Competing structural pressures: Active antecedent search modulates gap prediction in Hebrew. Cartner, M., Kishinevsky, E., Gidron, N. and Meltzer-Asscher, A.  Architectures and Mechanisms for Language Processing 29, Aug 31-Sep 2, 2023. (<a href="PDF/Cartner_et_al_2023_AMLaP_Refl.pdf" target="_blank">poster</a>)
+  Competing structural pressures: Active antecedent search modulates gap prediction in Hebrew. Cartner, M., Kishinevsky, E., Gidron, N. and Meltzer-Asscher, A.  Poster at Architectures and Mechanisms for Language Processing 29, Aug 31-Sep 2, 2023. (<a href="PDF/Cartner_et_al_2023_AMLaP_Refl.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-  Reflexive-antecedent search modulates gap formation: Evidence from Hebrew. Cartner, M. Cartner, M., Kishinevsky, E., Gidron, N. and Meltzer-Asscher, A. The annual conference on Human Sentence Processing, University of Pittsburgh, Mar 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_Refl.pdf" target="_blank">poster</a>)
+  Reflexive-antecedent search modulates gap formation: Evidence from Hebrew. Cartner, M. Cartner, M., Kishinevsky, E., Gidron, N. and Meltzer-Asscher, A. Poster at the annual conference on Human Sentence Processing, University of Pittsburgh, Mar 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_Refl.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-  Optional resumption is used to overcome ambiguity in Hebrew. Cartner, M. and Keshev, M. The annual conference on Human Sentence Processing, University of Pittsburgh, Mar 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_NS.pdf" target="_blank">poster</a>)
+  Optional resumption is used to overcome ambiguity in Hebrew. Cartner, M. and Keshev, M. Poster at the annual conference on Human Sentence Processing, University of Pittsburgh, Mar 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_NS.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-  Predictive parsing as a source for resumptive pronoun preference in Hebrew. Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M. The annual conference on Human Sentence Processing, University of Pittsburgh, Mar 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_RP.pdf" target="_blank">poster</a>)
+  Predictive parsing as a source for resumptive pronoun preference in Hebrew. Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M. Poster at the annual conference on Human Sentence Processing, University of Pittsburgh, Mar 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_RP.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-  Tracing optionality to alignment in Hebrew RPs. Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M. The annual conference on Human Sentence Processing, UC Santa Cruz, Mar 24-26, 2022. (<a href="PDF/Cartner_et_al_2022_HSP_RP.pdf" target="_blank">poster</a>)
+  Tracing optionality to alignment in Hebrew RPs. Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M. Poster at the annual conference on Human Sentence Processing, UC Santa Cruz, Mar 24-26, 2022. (<a href="PDF/Cartner_et_al_2022_HSP_RP.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-  Dynamic encoding of agreement features and its effects on interference. Keshev, M., Cartner, M., Neal, A., Meltzer-Asscher, A., and Dillon, B. The annual conference on Human Sentence Processing, UC Santa Cruz, Mar 24-26, 2022. 
+  Dynamic encoding of agreement features and its effects on interference. Keshev, M., Cartner, M., Neal, A., Meltzer-Asscher, A., and Dillon, B. Talk at the annual conference on Human Sentence Processing, UC Santa Cruz, Mar 24-26, 2022. (<a href="PDF/Keshev_et_al_2022_Encoding_HSP.pdf" target="_blank">slides</a>)
 
 <p>
   Processing multiple dependencies: Predicates and reflexive pronouns' agreement. Keshev, M., Cartner, M. and Meltzer-Asscher, A. Talk at the Crosslinguistic Perspectives on Processing and Learning workshop, University of Zürich, Sept 16-17, 2021.
@@ -107,19 +107,22 @@ Canonical argument alignment modulates gap, but not RP, acceptability in English
 <br>
 <h2>Other Presentations</h2>
 
-<p> The bilingual lexicon under Distributed Morphology: An Investigation of gender agreement in code-switching. Cartner, M., Meltzer-Asscher, A. and Horvath, J. Israel Association for Theoretical Linguistics workshop. Tel Aviv, October 28, 2024. (<a href="PDF/Cartner_et_al_2024_IATL.pdf" target="_blank">slides</a>)
+<p> Intra-sentential code-switching: Gender agreement. Cartner, M. Talk at the Department of Hebrew Language and Sociolinguistics, Ben Gurion University of the Negev. Be'er Sheva, Dec 17, 2024.
+</p>
+
+<p> The bilingual lexicon under Distributed Morphology: An Investigation of gender agreement in code-switching. Cartner, M., Meltzer-Asscher, A. and Horvath, J. Talk at the Israel Association for Theoretical Linguistics workshop. Tel Aviv, October 28, 2024. (<a href="PDF/Cartner_et_al_2024_IATL.pdf" target="_blank">slides</a>)
 </p>
 
 <p>
-Amelioration by resumptive pronouns: Relating processing and acceptability. Cartner, M., Wagers, M., Toosravandani, M. and Sichel, I. (Resumptive) Pronouns between grammar and processing, UC Santa Cruz, May 11, 2024.
+Amelioration by resumptive pronouns: Relating processing and acceptability. Cartner, M., Wagers, M., Toosravandani, M. and Sichel, I. Talk at "(Resumptive) Pronouns between grammar and processing" workshop, UC Santa Cruz, May 11, 2024.
 </p>
 
 <p>
-Animacy effects in object relativization and the theory of Agree. Sichel, I., Toosravandani, M., Cartner, M., and Wagers, M. (Resumptive) Pronouns between grammar and processing, UC Santa Cruz, May 11, 2024.
+Animacy effects in object relativization and the theory of Agree. Sichel, I., Toosravandani, M., Cartner, M., and Wagers, M. Talk at "(Resumptive) Pronouns between grammar and processing" workshop, UC Santa Cruz, May 11, 2024.
 </p>
 
 <p>
-  Cataphora resolution along a filler-gap dependency: SPR vs. G-Maze. Cartner, M. Talk at the Syntax, Semantics and Language Processing Lab, UC Santa Cruz, May 11, 2023.
+  Cataphora resolution along a filler-gap dependency: SPR vs. G-Maze. Cartner, M. The Syntax, Semantics and Language Processing Lab, UC Santa Cruz, May 11, 2023.
 </p>
 
 <p>
