--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
-            <li><a href="PDF/Cartner_CV_Dec2024_web.pdf" target="_blank">CV</a></li>
+            <li><a href="PDF/Cartner_CV_Apr2025_web.pdf" target="_blank">CV</a></li>
           </ul>
         </nav>
       </section>
@@ -46,99 +46,123 @@
 
 <br>
 
-<h2>Peer-Reviewed Presentations</h2>
+<h2>Peer-Reviewed Talks</h2>
 
-<p>
-Representational agreement attraction: Evidence from illusory feature conjunction in Hebrew. Cartner, M., Keshev, M., Lipitz, S., Dillon, B. and Meltzer-Asscher, A. Talk at Architectures and Mechanisms for Language Processing 30, Edinburgh, Sep 5-7, 2024. (<a href="PDF/Cartner_et_al_2024_AMLaP_Attr.pdf" target="_blank">slides</a>)
+<p> 
+Cartner, M. and Meltzer-Asscher, A. Gap prediction is not fully constrained by grammar: Hebrew Maze results. Talk at the 38th Annual Conference on Human Sentence Processing. University of Maryland, College Park, MD, USA. March 27-29, 2025. (<a href="PDF/Cartner_Meltzer-Asscher_2025_HSP_Refl-filler.pdf" target="_blank">slides</a>, <a href="https://drive.google.com/file/d/1o8QWJ9XQa6h-_yMi1B0u_RNabirQxgMq/view?usp=sharing" target="_blank">recording</a>)
 </p>
 
 <p>
-  Subject islands are not caused by information structure clashes: Evidence from topicalization. Webster, N., Kogan, M., Cartner, M., Wagers, M. and Sichel, I. Poster at Architectures and Mechanisms for Language Processing 30, Edinburgh, Sep 5-7, 2024. (<a href="PDF/Webster_et_al_2024_AMLaP_islands.pdf" target="_blank">poster</a>)
+Webster, N., Cartner, M., Kogan, M., Wagers, M., and Sichel, I. Information structure alone cannot account for subject islandhood: an experimental study. Talk at the 47th Annual Meeting of Generative Linguistics in the Old World. Goethe University, Frankfurt, Germany. March 25-27, 2025. (<a href="PDF/Webster_et_al_2025_GLOW.pdf" target="_blank">slides</a>)
 </p>
 
 <p>
-  A working memory model of sentence processing as binding morphemes to syntactic positions. Keshev, M., Cartner, M., Meltzer-Asscher, A. and Dillon, B. Talk at the 46th Annual Meeting of the Cognitive Science Society, Rotterdam, July 24-27, 2024. (<a href="PDF/CogSci_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">proceedings</a>)
+Cartner, M., Keshev, M., Lipitz, S., Dillon, B. and Meltzer-Asscher, A. Representational agreement attraction: Evidence from illusory feature conjunction in Hebrew. Talk at Architectures and Mechanisms for Language Processing 30, Edinburgh, Scotland. September 5-7, 2024. (<a href="PDF/Cartner_et_al_2024_AMLaP_Attr.pdf" target="_blank">slides</a>)
+</p>
+
+<p>
+Keshev, M., Cartner, M., Meltzer-Asscher, A. and Dillon, B. A working memory model of sentence processing as binding morphemes to syntactic positions. Talk at the 46th Annual Meeting of the Cognitive Science Society, Rotterdam, Netherlands. July 24-27, 2024. (<a href="PDF/CogSci_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">proceedings</a>)
+</p>
+
+<p>
+Keshev, M., Cartner, M., Meltzer-Asscher, A. and Dillon, B. A transient binding model of interference in sentence processing. Talk at the annual conference on Human Sentence Processing, University of Michigan, Ann Arbor, MI, USA. May 16-18, 2024.
+</p>
+
+<p>
+Keshev, M., Cartner, M., Neal, A., Meltzer-Asscher, A., and Dillon, B. Dynamic encoding of agreement features and its effects on interference. Talk at the annual conference on Human Sentence Processing, UC Santa Cruz, Santa Cruz, CA, USA. Mar 24-26, 2022. (<a href="PDF/Keshev_et_al_2022_Encoding_HSP.pdf" target="_blank">slides</a>)
 </p>
 
 
 <p>
-  A transient binding model of interference in sentence processing. Keshev, M., Cartner, M., Meltzer-Asscher, A. and Dillon, B. Talk at the annual conference on Human Sentence Processing, University of Michigan, May 16-18, 2024. 
+Keshev, M., Cartner, M. and Meltzer-Asscher, A. Processing multiple dependencies: Predicates and reflexive pronouns' agreement. Talk at the Crosslinguistic Perspectives on Processing and Learning workshop, University of Zürich, Switzerland. September 16-17, 2021.
 </p>
 
 <p>
-Canonical argument alignment modulates gap, but not RP, acceptability in English. Kogan, M., Cartner, M., Sichel, I., Toosarvandani, M., and Wagers, M. Poster at the annual conference on Human Sentence Processing, University of Michigan, May 16- 18, 2024.
+Keshev, M., Cartner, M. and Meltzer-Asscher, A. Processing multiple dependencies: Predicates' and reflexive pronouns' agreement features. Talk at the Linguistic Illusions in Sentence Processing workshop, University of Konstanz, Germany. September 13-14, 2021.
+</p>
+
+
+
+<br>
+<h2>Peer-Reviewed Posters</h2>
+
+<p>
+  Cartner, M., Dillon, B., Meltzer-Asscher, A., and Kehsev, M. Rational inference does not predict agreement errors: Gender vs number attraction in Hebrew comprehension. Poster at the 38th Annual Conference on Human Sentence Processing. University of Maryland, College Park, MD, USA. March 27-29. (<a href="PDF/Cartner_et_al_2025_HSP_num-gen.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-  Grammatical gender agreement in bilingual code-switching: Representational and processing considerations. Cartner, M., Meltzer-Asscher, A. and Horvath, J. Poster at Architectures and Mechanisms for Language Processing 29, Aug 31-Sep 2, 2023. (<a href="PDF/Cartner_et_al_2023_AMLaP_Agr.pdf" target="_blank">poster</a>)
+Kogan, M., Cartner, M., Webster, N., Wagers, M., and Sichel, I. Subject islands are not caused by information structure clashes: cross-constructional evidence. Poster at the 38th Annual Conference on Human Sentence Processing. University of Maryland, College Park, MD, USA. March 27-29. (<a href="PDF/Kogan_et_al_2025_HSP.pdf" target="_blank">poster</a>)
+</p>
+
+
+<p>
+Webster, N., Kogan, M., Cartner, M., Wagers, M. and Sichel, I. Subject islands are not caused by information structure clashes: Evidence from topicalization. Poster at Architectures and Mechanisms for Language Processing 30, Edinburgh, Scotland. September 5-7, 2024. (<a href="PDF/Webster_et_al_2024_AMLaP_islands.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-  Competing structural pressures: Active antecedent search modulates gap prediction in Hebrew. Cartner, M., Kishinevsky, E., Gidron, N. and Meltzer-Asscher, A.  Poster at Architectures and Mechanisms for Language Processing 29, Aug 31-Sep 2, 2023. (<a href="PDF/Cartner_et_al_2023_AMLaP_Refl.pdf" target="_blank">poster</a>)
+Kogan, M., Cartner, M., Sichel, I., Toosarvandani, M., and Wagers, M. Canonical argument alignment modulates gap, but not RP, acceptability in English. Poster at the annual conference on Human Sentence Processing, University of Michigan, Ann Arbor, MI, USA. May 16-18, 2024.
 </p>
 
 <p>
-  Reflexive-antecedent search modulates gap formation: Evidence from Hebrew. Cartner, M. Cartner, M., Kishinevsky, E., Gidron, N. and Meltzer-Asscher, A. Poster at the annual conference on Human Sentence Processing, University of Pittsburgh, Mar 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_Refl.pdf" target="_blank">poster</a>)
+Cartner, M., Meltzer-Asscher, A. and Horvath, J. Grammatical gender agreement in bilingual code-switching: Representational and processing considerations. Poster at Architectures and Mechanisms for Language Processing 29, San Sebastian, Spain. August 31-September 2, 2023. (<a href="PDF/Cartner_et_al_2023_AMLaP_Agr.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-  Optional resumption is used to overcome ambiguity in Hebrew. Cartner, M. and Keshev, M. Poster at the annual conference on Human Sentence Processing, University of Pittsburgh, Mar 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_NS.pdf" target="_blank">poster</a>)
+Cartner, M., Kishinevsky, E., Gidron, N. and Meltzer-Asscher, A. Competing structural pressures: Active antecedent search modulates gap prediction in Hebrew. Poster at Architectures and Mechanisms for Language Processing 29, San Sebastian, Spain. August 31-September 2, 2023. (<a href="PDF/Cartner_et_al_2023_AMLaP_Refl.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-  Predictive parsing as a source for resumptive pronoun preference in Hebrew. Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M. Poster at the annual conference on Human Sentence Processing, University of Pittsburgh, Mar 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_RP.pdf" target="_blank">poster</a>)
+Cartner, M., Kishinevsky, E., Gidron, N. and Meltzer-Asscher, A. Reflexive-antecedent search modulates gap formation: Evidence from Hebrew. Poster at the annual conference on Human Sentence Processing, University of Pittsburgh, Pittsburgh, PA, USA. March 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_Refl.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-  Tracing optionality to alignment in Hebrew RPs. Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M. Poster at the annual conference on Human Sentence Processing, UC Santa Cruz, Mar 24-26, 2022. (<a href="PDF/Cartner_et_al_2022_HSP_RP.pdf" target="_blank">poster</a>)
+Cartner, M. and Keshev, M. Optional resumption is used to overcome ambiguity in Hebrew. Poster at the annual conference on Human Sentence Processing, University of Pittsburgh, Pittsburgh, PA, USA. March 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_NS.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-  Dynamic encoding of agreement features and its effects on interference. Keshev, M., Cartner, M., Neal, A., Meltzer-Asscher, A., and Dillon, B. Talk at the annual conference on Human Sentence Processing, UC Santa Cruz, Mar 24-26, 2022. (<a href="PDF/Keshev_et_al_2022_Encoding_HSP.pdf" target="_blank">slides</a>)
-
-<p>
-  Processing multiple dependencies: Predicates and reflexive pronouns' agreement. Keshev, M., Cartner, M. and Meltzer-Asscher, A. Talk at the Crosslinguistic Perspectives on Processing and Learning workshop, University of Zürich, Sept 16-17, 2021.
+Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M. Predictive parsing as a source for resumptive pronoun preference in Hebrew. Poster at the annual conference on Human Sentence Processing, University of Pittsburgh, Pittsburgh, PA, USA. March 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_RP.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-  Processing multiple dependencies: Predicates' and reflexive pronouns' agreement features. Keshev, M., Cartner, M. and Meltzer-Asscher, A. Talk at the Linguistic Illusions in Sentence Processing workshop, University of Konstanz, Sept 13-14, 2021.
+Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M.  Tracing optionality to alignment in Hebrew RPs. Poster talk at the annual conference on Human Sentence Processing, UC Santa Cruz, Santa Cruz, CA, USA. March 24-26, 2022. (<a href="PDF/Cartner_et_al_2022_HSP_RP.pdf" target="_blank">poster</a>)
 </p>
+
+
 
 <br>
 <h2>Other Presentations</h2>
 
-<p> Intra-sentential code-switching: Gender agreement. Cartner, M. Talk at the Department of Hebrew Language and Sociolinguistics, Ben Gurion University of the Negev. Be'er Sheva, Dec 17, 2024.
+<p> Cartner, M. Intra-sentential code-switching: Gender agreement. Talk at the Department of Hebrew Language and Sociolinguistics, Ben Gurion University of the Negev, Be'er Sheva, Israel. December 17, 2024.
 </p>
 
-<p> The bilingual lexicon under Distributed Morphology: An Investigation of gender agreement in code-switching. Cartner, M., Meltzer-Asscher, A. and Horvath, J. Talk at the Israel Association for Theoretical Linguistics workshop. Tel Aviv, October 28, 2024. (<a href="PDF/Cartner_et_al_2024_IATL.pdf" target="_blank">slides</a>)
-</p>
-
-<p>
-Amelioration by resumptive pronouns: Relating processing and acceptability. Cartner, M., Wagers, M., Toosravandani, M. and Sichel, I. Talk at "(Resumptive) Pronouns between grammar and processing" workshop, UC Santa Cruz, May 11, 2024.
+<p> Cartner, M., Meltzer-Asscher, A., and Horvath, J. The bilingual lexicon under Distributed Morphology: An investigation of gender agreement in code-switching. Israel Association for Theoretical Linguistics workshop, Tel Aviv University, Tel Aviv, Israel. October 28, 2024. (<a href="PDF/Cartner_et_al_2024_IATL.pdf" target="_blank">slides</a>)
 </p>
 
 <p>
-Animacy effects in object relativization and the theory of Agree. Sichel, I., Toosravandani, M., Cartner, M., and Wagers, M. Talk at "(Resumptive) Pronouns between grammar and processing" workshop, UC Santa Cruz, May 11, 2024.
+Cartner, M., Wagers, M., Toosravandani, M.  and Sichel, I. Amelioration by resumptive pronouns: Relating processing and acceptability. (Resumptive) Pronouns between grammar and processing, UC Santa Cruz, Santa Cruz, CA, USA. May 11, 2024.
 </p>
 
 <p>
-  Cataphora resolution along a filler-gap dependency: SPR vs. G-Maze. Cartner, M. The Syntax, Semantics and Language Processing Lab, UC Santa Cruz, May 11, 2023.
+Sichel, I., Toosravandani, M., Cartner, M., and Wagers, M. Animacy effects in object relativization and the theory of Agree. (Resumptive) Pronouns between grammar and processing, UC Santa Cruz, Santa Cruz, CA, USA. May 11, 2024.
 </p>
 
 <p>
-  Units of intra-sentential Code Switching and the modularity of grammar. Cartner, M. Talk at the Department of Linguistics, University of Massachusetts Amherst, Mar 29, 2023.
+Cartner, M. Cataphora resolution along a filler-gap dependency: SPR vs. G-Maze. The Syntax, Semantics and Language Processing Lab, UC Santa Cruz, Santa Cruz, CA, USA. May 11, 2023.
 </p>
 
 <p>
-  Lexical representations in bilingual grammar: Gender agreement in English-Hebrew Code Switching. Cartner, M. Talk at the linguistics symposium in honor of the retirement of Prof. Mira Ariel, Prof. Outi Bat El and Prof. Julia Horvath, Tel-Aviv University, Jan 30, 2023.
+Cartner, M. Units of intra-sentential Code Switching and the modularity of grammar. The Department of Linguistics, University of Massachusetts Amherst, Amherst, MA, USA. March 29, 2023.</p>
+
+<p>
+Cartner, M. Lexical representations in bilingual grammar: Gender agreement in English-Hebrew Code Switching. The linguistics symposium in honor of the retirement of Prof. Mira Ariel, Prof. Outi Bat El and Prof. Julia Horvath, Tel-Aviv University, Tel Aviv, Israel, January 30, 2023.
 </p>
 
 <p>
-  Units of intra-sentential Code Switching and the modularity of grammar. Cartner, M. Talk at the linguistics department Interdisciplinary Colloquium, Tel-Aviv University, Jan 12, 2023.
+Cartner, M. Units of intra-sentential Code Switching and the modularity of grammar. The linguistics department Interdisciplinary Colloquium, Tel-Aviv University, Tel Aviv, Israel, January 12, 2023.
 </p>
 
 <p>
-  Units of intra-sentential Code Switching and the architecture of grammar. Cartner, M., Meltzer-Asscher, A. and Horvath, J. Talk at the Syntax Workshop, Tel-Aviv University, July 5, 2022.
+Cartner, M., Meltzer-Asscher, A. and Horvath, J. Units of intra-sentential Code Switching and the architecture of grammar. The Syntax Workshop, Tel-Aviv University, Tel Aviv, Israel, July 5, 2022.
 </p>
 
 
