--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
-            <li><a href="PDF/Cartner_CV_Apr2025_web.pdf" target="_blank">CV</a></li>
+            <li><a href="PDF/Cartner_CV_May2025_web.pdf" target="_blank">CV</a></li>
           </ul>
         </nav>
       </section>
@@ -37,11 +37,11 @@
 <h2>Papers</h2>
 
 <p>
-  Cartner, M., Kogan, M., Webster, N., Wagers, M., and Sichel, I. (Submitted). Subject islands do not reduce to construction-specific discourse function. (<a href="PDF/Cartner_et_al_2025_Islands.pdf" target="_blank">Preprint</a>)
+  Cartner, M.*, Kogan, M.*, Webster, N.*, Wagers, M., and Sichel, I. (Submitted). Subject islands do not reduce to construction-specific discourse function. (* = co-first authors) (<a href="PDF/Cartner_et_al_2025_Islands.pdf" target="_blank">Preprint</a>)
 </p>
 
 <p>
-  Cartner, M., Meltzer-Asscher, A., and Horvath, J. (Submitted). Late insertion in code-switching: Evidence from gender agreement strategies of Hebrew-English bilinguals. 
+  Cartner, M., Meltzer-Asscher, A., and Horvath, J. (Accepted with revisions). Late insertion in code-switching: Evidence from gender agreement strategies of Hebrew-English bilinguals. 
 </p>
 
 <p>
@@ -56,33 +56,41 @@
 
 <h2>Peer-Reviewed Talks</h2>
 
+<p>
+  Cartner, M. and Horvath, J. Intra-sentential code switching at the syntax-prosody interface. Talk at 34th Colloquium on Generative Grammar (CGG). UNED, Madrid, Spain. May 7-9, 2025.
+</p>
+
+<p>
+  Cartner, M., Meltzer-Asscher, A. and Horvath, J. The bilingual lexicon under Distributed Morphology: An investigation of gender agreement in code-switching. Talk at the 43rd West Coast Conference on Formal Linguistics (WCCFL). University of Washington, Seattle, WA, USA. April 25-27, 2025. (<a href="PDF/Cartner_et_al_2025_WCCFL.pdf" target="_blank">slides</a>)
+</p>
+
 <p> 
-Cartner, M. and Meltzer-Asscher, A. Gap prediction is not fully constrained by grammar: Hebrew Maze results. Talk at the 38th Annual Conference on Human Sentence Processing. University of Maryland, College Park, MD, USA. March 27-29, 2025. (<a href="PDF/Cartner_Meltzer-Asscher_2025_HSP_Refl-filler.pdf" target="_blank">slides</a>, <a href="https://drive.google.com/file/d/1o8QWJ9XQa6h-_yMi1B0u_RNabirQxgMq/view?usp=sharing" target="_blank">recording</a>)
+Cartner, M. and Meltzer-Asscher, A. Gap prediction is not fully constrained by grammar: Hebrew Maze results. Talk at the 38th Annual Conference on Human Sentence Processing (HSP). University of Maryland, College Park, MD, USA. March 27-29, 2025. (<a href="PDF/Cartner_Meltzer-Asscher_2025_HSP_Refl-filler.pdf" target="_blank">slides</a>, <a href="https://drive.google.com/file/d/1o8QWJ9XQa6h-_yMi1B0u_RNabirQxgMq/view?usp=sharing" target="_blank">recording</a>)
 </p>
 
 <p>
-Webster, N., Cartner, M., Kogan, M., Wagers, M., and Sichel, I. Information structure alone cannot account for subject islandhood: an experimental study. Talk at the 47th Annual Meeting of Generative Linguistics in the Old World. Goethe University, Frankfurt, Germany. March 25-27, 2025. (<a href="PDF/Webster_et_al_2025_GLOW.pdf" target="_blank">slides</a>)
+Webster, N., Cartner, M., Kogan, M., Wagers, M., and Sichel, I. Information structure alone cannot account for subject islandhood: an experimental study. Talk at the 47th Annual Meeting of Generative Linguistics in the Old World (GLOW). Goethe University, Frankfurt, Germany. March 25-27, 2025. (<a href="PDF/Webster_et_al_2025_GLOW.pdf" target="_blank">slides</a>)
 </p>
 
 <p>
-Cartner, M., Keshev, M., Lipitz, S., Dillon, B. and Meltzer-Asscher, A. Representational agreement attraction: Evidence from illusory feature conjunction in Hebrew. Talk at Architectures and Mechanisms for Language Processing 30, Edinburgh, Scotland. September 5-7, 2024. (<a href="PDF/Cartner_et_al_2024_AMLaP_Attr.pdf" target="_blank">slides</a>)
+Cartner, M., Keshev, M., Lipitz, S., Dillon, B. and Meltzer-Asscher, A. Representational agreement attraction: Evidence from illusory feature conjunction in Hebrew. Talk at Architectures and Mechanisms for Language Processing 30 (AMLaP). Edinburgh, Scotland. September 5-7, 2024. (<a href="PDF/Cartner_et_al_2024_AMLaP_Attr.pdf" target="_blank">slides</a>)
 </p>
 
 <p>
-Keshev, M., Cartner, M., Meltzer-Asscher, A. and Dillon, B. A working memory model of sentence processing as binding morphemes to syntactic positions. Talk at the 46th Annual Meeting of the Cognitive Science Society, Rotterdam, Netherlands. July 24-27, 2024. (<a href="PDF/CogSci_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">proceedings</a>)
+Keshev, M., Cartner, M., Meltzer-Asscher, A. and Dillon, B. A working memory model of sentence processing as binding morphemes to syntactic positions. Talk at the 46th Annual Meeting of the Cognitive Science Society (CogSci). Rotterdam, Netherlands. July 24-27, 2024. (<a href="PDF/CogSci_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">proceedings</a>)
 </p>
 
 <p>
-Keshev, M., Cartner, M., Meltzer-Asscher, A. and Dillon, B. A transient binding model of interference in sentence processing. Talk at the annual conference on Human Sentence Processing, University of Michigan, Ann Arbor, MI, USA. May 16-18, 2024.
+Keshev, M., Cartner, M., Meltzer-Asscher, A. and Dillon, B. A transient binding model of interference in sentence processing. Talk at the 37th Annual Conference on Human Sentence Processing (HSP). University of Michigan, Ann Arbor, MI, USA. May 16-18, 2024.
 </p>
 
 <p>
-Keshev, M., Cartner, M., Neal, A., Meltzer-Asscher, A., and Dillon, B. Dynamic encoding of agreement features and its effects on interference. Talk at the annual conference on Human Sentence Processing, UC Santa Cruz, Santa Cruz, CA, USA. Mar 24-26, 2022. (<a href="PDF/Keshev_et_al_2022_Encoding_HSP.pdf" target="_blank">slides</a>)
+Keshev, M., Cartner, M., Neal, A., Meltzer-Asscher, A., and Dillon, B. Dynamic encoding of agreement features and its effects on interference. Talk at the 35th Annual Conference on Human Sentence Processing (HSP). UC Santa Cruz, Santa Cruz, CA, USA. Mar 24-26, 2022. (<a href="PDF/Keshev_et_al_2022_Encoding_HSP.pdf" target="_blank">slides</a>)
 </p>
 
 
 <p>
-Keshev, M., Cartner, M. and Meltzer-Asscher, A. Processing multiple dependencies: Predicates and reflexive pronouns' agreement. Talk at the Crosslinguistic Perspectives on Processing and Learning workshop, University of Zürich, Switzerland. September 16-17, 2021.
+Keshev, M., Cartner, M. and Meltzer-Asscher, A. Processing multiple dependencies: Predicates and reflexive pronouns' agreement. Talk at the Crosslinguistic Perspectives on Processing and Learning workshop (X-PPL). University of Zürich, Switzerland. September 16-17, 2021.
 </p>
 
 <p>
@@ -95,28 +103,28 @@ Keshev, M., Cartner, M. and Meltzer-Asscher, A. Processing multiple dependencies
 <h2>Peer-Reviewed Posters</h2>
 
 <p>
-  Cartner, M., Dillon, B., Meltzer-Asscher, A., and Kehsev, M. Rational inference does not predict agreement errors: Gender vs number attraction in Hebrew comprehension. Poster at the 38th Annual Conference on Human Sentence Processing. University of Maryland, College Park, MD, USA. March 27-29. (<a href="PDF/Cartner_et_al_2025_HSP_num-gen.pdf" target="_blank">poster</a>)
+  Cartner, M., Dillon, B., Meltzer-Asscher, A., and Kehsev, M. Rational inference does not predict agreement errors: Gender vs number attraction in Hebrew comprehension. Poster at the 38th Annual Conference on Human Sentence Processing (HSP). University of Maryland, College Park, MD, USA. March 27-29. (<a href="PDF/Cartner_et_al_2025_HSP_num-gen.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-Kogan, M., Cartner, M., Webster, N., Wagers, M., and Sichel, I. Subject islands are not caused by information structure clashes: cross-constructional evidence. Poster at the 38th Annual Conference on Human Sentence Processing. University of Maryland, College Park, MD, USA. March 27-29. (<a href="PDF/Kogan_et_al_2025_HSP.pdf" target="_blank">poster</a>)
+Kogan, M., Cartner, M., Webster, N., Wagers, M., and Sichel, I. Subject islands are not caused by information structure clashes: cross-constructional evidence. Poster at the 38th Annual Conference on Human Sentence Processing (HSP). University of Maryland, College Park, MD, USA. March 27-29. (<a href="PDF/Kogan_et_al_2025_HSP.pdf" target="_blank">poster</a>)
 </p>
 
 
 <p>
-Webster, N., Kogan, M., Cartner, M., Wagers, M. and Sichel, I. Subject islands are not caused by information structure clashes: Evidence from topicalization. Poster at Architectures and Mechanisms for Language Processing 30, Edinburgh, Scotland. September 5-7, 2024. (<a href="PDF/Webster_et_al_2024_AMLaP_islands.pdf" target="_blank">poster</a>)
+Webster, N., Kogan, M., Cartner, M., Wagers, M. and Sichel, I. Subject islands are not caused by information structure clashes: Evidence from topicalization. Poster at Architectures and Mechanisms for Language Processing 30 (AMLaP). Edinburgh, Scotland. September 5-7, 2024. (<a href="PDF/Webster_et_al_2024_AMLaP_islands.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-Kogan, M., Cartner, M., Sichel, I., Toosarvandani, M., and Wagers, M. Canonical argument alignment modulates gap, but not RP, acceptability in English. Poster at the annual conference on Human Sentence Processing, University of Michigan, Ann Arbor, MI, USA. May 16-18, 2024.
+Kogan, M., Cartner, M., Sichel, I., Toosarvandani, M., and Wagers, M. Canonical argument alignment modulates gap, but not RP, acceptability in English. Poster at the 37th Annual Conference on Human Sentence Processing (HSP). University of Michigan, Ann Arbor, MI, USA. May 16-18, 2024.
 </p>
 
 <p>
-Cartner, M., Meltzer-Asscher, A. and Horvath, J. Grammatical gender agreement in bilingual code-switching: Representational and processing considerations. Poster at Architectures and Mechanisms for Language Processing 29, San Sebastian, Spain. August 31-September 2, 2023. (<a href="PDF/Cartner_et_al_2023_AMLaP_Agr.pdf" target="_blank">poster</a>)
+Cartner, M., Meltzer-Asscher, A. and Horvath, J. Grammatical gender agreement in bilingual code-switching: Representational and processing considerations. Poster at Architectures and Mechanisms for Language Processing 29 (AMLaP). San Sebastian, Spain. August 31-September 2, 2023. (<a href="PDF/Cartner_et_al_2023_AMLaP_Agr.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-Cartner, M., Kishinevsky, E., Gidron, N. and Meltzer-Asscher, A. Competing structural pressures: Active antecedent search modulates gap prediction in Hebrew. Poster at Architectures and Mechanisms for Language Processing 29, San Sebastian, Spain. August 31-September 2, 2023. (<a href="PDF/Cartner_et_al_2023_AMLaP_Refl.pdf" target="_blank">poster</a>)
+Cartner, M., Kishinevsky, E., Gidron, N. and Meltzer-Asscher, A. Competing structural pressures: Active antecedent search modulates gap prediction in Hebrew. Poster at Architectures and Mechanisms for Language Processing 29 (AMLaP). San Sebastian, Spain. August 31-September 2, 2023. (<a href="PDF/Cartner_et_al_2023_AMLaP_Refl.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
@@ -124,15 +132,15 @@ Cartner, M., Kishinevsky, E., Gidron, N. and Meltzer-Asscher, A. Reflexive-antec
 </p>
 
 <p>
-Cartner, M. and Keshev, M. Optional resumption is used to overcome ambiguity in Hebrew. Poster at the annual conference on Human Sentence Processing, University of Pittsburgh, Pittsburgh, PA, USA. March 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_NS.pdf" target="_blank">poster</a>)
+Cartner, M. and Keshev, M. Optional resumption is used to overcome ambiguity in Hebrew. Poster at the 36th Annual Conference on Human Sentence Processing (HSP). University of Pittsburgh, Pittsburgh, PA, USA. March 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_NS.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M. Predictive parsing as a source for resumptive pronoun preference in Hebrew. Poster at the annual conference on Human Sentence Processing, University of Pittsburgh, Pittsburgh, PA, USA. March 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_RP.pdf" target="_blank">poster</a>)
+Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M. Predictive parsing as a source for resumptive pronoun preference in Hebrew. Poster at the 36th Annual Conference on Human Sentence Processing (HSP). University of Pittsburgh, Pittsburgh, PA, USA. March 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_RP.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M.  Tracing optionality to alignment in Hebrew RPs. Poster talk at the annual conference on Human Sentence Processing, UC Santa Cruz, Santa Cruz, CA, USA. March 24-26, 2022. (<a href="PDF/Cartner_et_al_2022_HSP_RP.pdf" target="_blank">poster</a>)
+Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M.  Tracing optionality to alignment in Hebrew RPs. Poster talk at the 35th annual conference on Human Sentence Processing (HSP). UC Santa Cruz, Santa Cruz, CA, USA. March 24-26, 2022. (<a href="PDF/Cartner_et_al_2022_HSP_RP.pdf" target="_blank">poster</a>)
 </p>
 
 
@@ -143,7 +151,7 @@ Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M.  Tracing optionality t
 <p> Cartner, M. Intra-sentential code-switching: Gender agreement. Talk at the Department of Hebrew Language and Sociolinguistics, Ben Gurion University of the Negev, Be'er Sheva, Israel. December 17, 2024.
 </p>
 
-<p> Cartner, M., Meltzer-Asscher, A., and Horvath, J. The bilingual lexicon under Distributed Morphology: An investigation of gender agreement in code-switching. Israel Association for Theoretical Linguistics workshop, Tel Aviv University, Tel Aviv, Israel. October 28, 2024. (<a href="PDF/Cartner_et_al_2024_IATL.pdf" target="_blank">slides</a>)
+<p> Cartner, M., Meltzer-Asscher, A., and Horvath, J. The bilingual lexicon under Distributed Morphology: An investigation of gender agreement in code-switching. Israel Association for Theoretical Linguistics workshop (IATL). Tel Aviv University, Tel Aviv, Israel. October 28, 2024. 
 </p>
 
 <p>
