--- a/research.html
+++ b/research.html
@@ -58,7 +58,7 @@
 <h2>Peer-Reviewed Talks</h2>
 
 <p>
-  Cartner, M. and Horvath, J. Intra-sentential code switching at the syntax-prosody interface. Talk at 34th Colloquium on Generative Grammar (CGG). UNED, Madrid, Spain. May 7-9, 2025.
+  Cartner, M. and Horvath, J. Intra-sentential code switching at the syntax-prosody interface. Talk at 34th Colloquium on Generative Grammar (CGG). UNED, Madrid, Spain. May 7-9, 2025. (<a href="PDF/Cartner_Horvath_2025_CGG.pdf" target="_blank">slides</a>)
 </p>
 
 <p>
@@ -66,7 +66,7 @@
 </p>
 
 <p> 
-Cartner, M. and Meltzer-Asscher, A. Gap prediction is not fully constrained by grammar: Hebrew Maze results. Talk at the 38th Annual Conference on Human Sentence Processing (HSP). University of Maryland, College Park, MD, USA. March 27-29, 2025. (<a href="PDF/Cartner_Meltzer-Asscher_2025_HSP_Refl-filler.pdf" target="_blank">slides</a>, <a href="https://drive.google.com/file/d/1o8QWJ9XQa6h-_yMi1B0u_RNabirQxgMq/view?usp=sharing" target="_blank">recording</a>)
+Cartner, M. and Meltzer-Asscher, A. Gap prediction is not fully constrained by grammar: Hebrew Maze results. Talk at the 38th Annual Conference on Human Sentence Processing (HSP). University of Maryland, College Park, MD, USA. March 27-29, 2025. (<a href="PDF/Cartner_Meltzer-Asscher_2025_HSP_Refl-filler.pdf" target="_blank">slides</a>, <a href="https://drive.google.com/drive/folders/1Clonpl-3he6VETsEDdpqemqJ3iKncpfS" target="_blank">recording</a>)
 </p>
 
 <p>
