TAU & HUJI talks

--- a/research.html
+++ b/research.html
@@ -149,6 +149,15 @@ Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M.  Tracing optionality t
 <br>
 <h2>Other Presentations</h2>
 
+<p>Cartner, M. and Horvath, J. Intra-sentential code switching at the syntax-prosody interface. Talk given by Julia Horvath at the HUN-REN Hungarian Research Centre for Linguistics, Budapest, Hungary. May 27, 2025. 
+</p>
+
+<p>Cartner, M. Online dependency resolution given competing structural pressures: The case of fronted reflexives. Talk at the Linguistics Department Interdisciplinary Colloquium, Tel Aviv University, Tel Aviv, Israel. May 22, 2025.
+</p>
+
+<p> Cartner, M. The bilingual lexicon under Distributed Morphology: An Investigation of gender agreement in code-switching. Talk at the Linguistics Department Colloquium, The Hebrew University, Jerusalem, Israel. May 20, 2025.
+</p>
+
 <p> Cartner, M. Intra-sentential code-switching: Gender agreement. Talk at the Department of Hebrew Language and Sociolinguistics, Ben Gurion University of the Negev, Be'er Sheva, Israel. December 17, 2024.
 </p>
 
