--- a/research.html
+++ b/research.html
@@ -38,7 +38,7 @@
 <h2>Papers</h2>
 
 <p>
-  Cartner, M.*, Kogan, M.*, Webster, N.*, Wagers, M., and Sichel, I. (Submitted). Subject islands do not reduce to construction-specific discourse function. (* = co-first authors) (<a href="PDF/Cartner_et_al_2025_Islands.pdf" target="_blank">Preprint</a>)
+  Cartner, M.*, Kogan, M.*, Webster, N.*, Wagers, M., and Sichel, I. (Under review). Subject islands do not reduce to construction-specific discourse function. (* = co-first authors) (<a href="PDF/Cartner_et_al_2025_Islands.pdf" target="_blank">Preprint</a>)
 </p>
 
 <p>
