--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@
 </p>
 
 <p>
-  Cartner, M., Meltzer-Asscher, A., and Horvath, J. (Accepted with revisions). Late insertion in code-switching: Evidence from gender agreement strategies of Hebrew-English bilinguals. 
+  Cartner, M., Meltzer-Asscher, A., and Horvath, J. (Under review). Late insertion in code-switching: Evidence from gender agreement strategies of Hebrew-English bilinguals. 
 </p>
 
 <p>
