--- a/research.html
+++ b/research.html
@@ -104,11 +104,11 @@ Keshev, M., Cartner, M. and Meltzer-Asscher, A. Processing multiple dependencies
 <h2>Peer-Reviewed Posters</h2>
 
 <p>
-  Cartner, M., Dillon, B., Meltzer-Asscher, A., and Kehsev, M. Rational inference does not predict agreement errors: Gender vs number attraction in Hebrew comprehension. Poster at the 38th Annual Conference on Human Sentence Processing (HSP). University of Maryland, College Park, MD, USA. March 27-29. (<a href="PDF/Cartner_et_al_2025_HSP_num-gen.pdf" target="_blank">poster</a>)
+  Cartner, M., Dillon, B., Meltzer-Asscher, A., and Keshev, M. Rational inference does not predict agreement errors: Gender vs number attraction in Hebrew comprehension. Poster at the 38th Annual Conference on Human Sentence Processing (HSP). University of Maryland, College Park, MD, USA. March 27-29, 2025. (<a href="PDF/Cartner_et_al_2025_HSP_num-gen.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-Kogan, M., Cartner, M., Webster, N., Wagers, M., and Sichel, I. Subject islands are not caused by information structure clashes: cross-constructional evidence. Poster at the 38th Annual Conference on Human Sentence Processing (HSP). University of Maryland, College Park, MD, USA. March 27-29. (<a href="PDF/Kogan_et_al_2025_HSP.pdf" target="_blank">poster</a>)
+Kogan, M., Cartner, M., Webster, N., Wagers, M., and Sichel, I. Subject islands are not caused by information structure clashes: cross-constructional evidence. Poster at the 38th Annual Conference on Human Sentence Processing (HSP). University of Maryland, College Park, MD, USA. March 27-29, 2025. (<a href="PDF/Kogan_et_al_2025_HSP.pdf" target="_blank">poster</a>)
 </p>
 
 
@@ -137,11 +137,11 @@ Cartner, M. and Keshev, M. Optional resumption is used to overcome ambiguity in 
 </p>
 
 <p>
-Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M. Predictive parsing as a source for resumptive pronoun preference in Hebrew. Poster at the 36th Annual Conference on Human Sentence Processing (HSP). University of Pittsburgh, Pittsburgh, PA, USA. March 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_RP.pdf" target="_blank">poster</a>)
+Cartner, M., Sichel, I., Toosarvandani, M. and Wagers, M. Predictive parsing as a source for resumptive pronoun preference in Hebrew. Poster at the 36th Annual Conference on Human Sentence Processing (HSP). University of Pittsburgh, Pittsburgh, PA, USA. March 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_RP.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
-Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M.  Tracing optionality to alignment in Hebrew RPs. Poster talk at the 35th annual conference on Human Sentence Processing (HSP). UC Santa Cruz, Santa Cruz, CA, USA. March 24-26, 2022. (<a href="PDF/Cartner_et_al_2022_HSP_RP.pdf" target="_blank">poster</a>)
+Cartner, M., Sichel, I., Toosarvandani, M. and Wagers, M.  Tracing optionality to alignment in Hebrew RPs. Poster talk at the 35th annual conference on Human Sentence Processing (HSP). UC Santa Cruz, Santa Cruz, CA, USA. March 24-26, 2022. (<a href="PDF/Cartner_et_al_2022_HSP_RP.pdf" target="_blank">poster</a>)
 </p>
 
 
@@ -165,11 +165,11 @@ Cartner, M., Sichel, I., Toosravandani, M. and Wagers, M.  Tracing optionality t
 </p>
 
 <p>
-Cartner, M., Wagers, M., Toosravandani, M.  and Sichel, I. Amelioration by resumptive pronouns: Relating processing and acceptability. (Resumptive) Pronouns between grammar and processing, UC Santa Cruz, Santa Cruz, CA, USA. May 11, 2024.
+Cartner, M., Wagers, M., Toosarvandani, M.  and Sichel, I. Amelioration by resumptive pronouns: Relating processing and acceptability. (Resumptive) Pronouns between grammar and processing, UC Santa Cruz, Santa Cruz, CA, USA. May 11, 2024.
 </p>
 
 <p>
-Sichel, I., Toosravandani, M., Cartner, M., and Wagers, M. Animacy effects in object relativization and the theory of Agree. (Resumptive) Pronouns between grammar and processing, UC Santa Cruz, Santa Cruz, CA, USA. May 11, 2024.
+Sichel, I., Toosarvandani, M., Cartner, M., and Wagers, M. Animacy effects in object relativization and the theory of Agree. (Resumptive) Pronouns between grammar and processing, UC Santa Cruz, Santa Cruz, CA, USA. May 11, 2024.
 </p>
 
 <p>
