--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
-            <li><a href="PDF/Cartner_CV_May2025_web.pdf" target="_blank">CV</a></li>
+            <li><a href="PDF/Cartner_CV_Sep2025_web.pdf" target="_blank">CV</a></li>
           </ul>
         </nav>
       </section>
@@ -36,6 +36,14 @@
 
 
 <h2>Papers</h2>
+
+<p>
+Keshev, M., Cartner, M., Meltzer-Asscher, A., and Dillon, B. (Submitted). Representation distortion contributes to agreement attraction in comprehension.
+</p>
+
+<p>
+Cartner, M. and Horvath, J. (Submitted). Intra-sentential code-switching at the syntax-phonology interface.
+</p>
 
 <p>
   Cartner, M.*, Kogan, M.*, Webster, N.*, Wagers, M., and Sichel, I. (Under review). Subject islands do not reduce to construction-specific discourse function. (* = co-first authors) (<a href="PDF/Cartner_et_al_2025_Islands.pdf" target="_blank">Preprint</a>)
