syn-pros preprint

--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@ Keshev, M., Cartner, M., Meltzer-Asscher, A., and Dillon, B. (Submitted). Repres
 </p>
 
 <p>
-Cartner, M. and Horvath, J. (Submitted). Intra-sentential code-switching at the syntax-phonology interface.
+Cartner, M. and Horvath, J. (Submitted). Intra-sentential code-switching at the syntax-phonology interface. (<a href="PDF/Cartner_Horvath_2025_syn-pros.pdf" target="_blank">Preprint</a>)
 </p>
 
 <p>
