--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
-            <li><a href="PDF/Cartner_CV_Sep2025_web.pdf" target="_blank">CV</a></li>
+            <li><a href="PDF/Cartner_CV_Oct2025_web.pdf" target="_blank">CV</a></li>
           </ul>
         </nav>
       </section>
@@ -38,11 +38,14 @@
         </section>
 
         <section class="text">
-          <p> I'm a PhD candidate in the <a href="https://en-humanities.tau.ac.il/linguistics" target="_blank">Linguistics Department</a> at Tel Aviv University, advised by <a href="https://english.tau.ac.il/profile/horvath" target="_blank">Julia Horvath</a>. </p>
+          <p> I am a PhD candidate in the Linguistics Department at Tel Aviv University, advised by <a href="https://english.tau.ac.il/profile/horvath" target="_blank">Julia Horvath</a>. </p>
+
+          <p> I am currently a visiting scholar in the Department of Linguistics at UC Santa Cruz for the 2025–26 academic year.</p>
 
           <p> My research is in theoretical syntax and psycholinguistics. I am interested in the representation of grammatical knowledge, specifically its application to bilingual behavior and its role in sentence processing.</p>
 
           <p> In my dissertation, I study syntactic constraints on bilingual code-switching. I am interested in the division of labour between grammatical modules and the content of the lexicon, and focus on cyclicity, agreement, and movement in intra-sentential code-switching. My research is based on data from Hebrew-English bilinguals collected using psycholinguistic methods.</p>
+
 
           <p> <b>Contact:</b> mandycartner@mail.tau.ac.il </p>
         </section>
@@ -52,7 +55,7 @@
     </section>
 
     <section class="footer">
-          Last updated: September 2025
+          Last updated: October 2025
         </section>
 
 
