--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
-            <li><a href="PDF/Cartner_CV_Sep2025_web.pdf" target="_blank">CV</a></li>
+            <li><a href="PDF/Cartner_CV_Oct2025_web.pdf" target="_blank">CV</a></li>
           </ul>
         </nav>
       </section>
@@ -35,14 +35,10 @@
 <section class="section-content2">
 
 
-<h2>Papers</h2>
+<h2>Journal articles</h2>
 
 <p>
-Keshev, M., Cartner, M., Meltzer-Asscher, A., and Dillon, B. (Submitted). Representation distortion contributes to agreement attraction in comprehension.
-</p>
-
-<p>
-Cartner, M. and Horvath, J. (Submitted). Intra-sentential code-switching at the syntax-phonology interface. (<a href="PDF/Cartner_Horvath_2025_syn-pros.pdf" target="_blank">Preprint</a>)
+Keshev, M., Cartner, M., Meltzer-Asscher, A., and Dillon, B. (Under review). Representation distortion contributes to agreement attraction in comprehension.
 </p>
 
 <p>
@@ -63,10 +59,23 @@ Cartner, M. and Horvath, J. (Submitted). Intra-sentential code-switching at the 
 
 <br>
 
-<h2>Peer-Reviewed Talks</h2>
+<h2>Conference proceedings</h2>
 
 <p>
-  Cartner, M. and Horvath, J. Intra-sentential code switching at the syntax-prosody interface. Talk at 34th Colloquium on Generative Grammar (CGG). UNED, Madrid, Spain. May 7-9, 2025. (<a href="PDF/Cartner_Horvath_2025_CGG.pdf" target="_blank">slides</a>)
+Cartner, M. and Horvath, J. (Under review). Intra-sentential code-switching at the syntax-phonology interface. (<a href="PDF/Cartner_Horvath_2025_syn-pros.pdf" target="_blank">Preprint</a>)
+</p>
+
+<p>
+  Keshev, M., Cartner, M., Meltzer‐Asscher, A., and Dillon, B. (2024). A working memory model of sentence processing as binding morphemes to syntactic positions. <em>Proceedings of the Annual Meeting of the Cognitive Science Society</em>, 46(0). (<a href="PDF/CogSci_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">PDF</a>)
+</p>
+
+<br>
+
+
+<h2>Selected peer-reviewed talks</h2>
+
+<p>
+  Cartner, M. and Horvath, J. Intra-sentential code switching at the syntax-prosody interface. Talk at the 34th Colloquium on Generative Grammar (CGG). UNED, Madrid, Spain. May 7-9, 2025. (<a href="PDF/Cartner_Horvath_2025_CGG.pdf" target="_blank">slides</a>)
 </p>
 
 <p>
@@ -74,7 +83,7 @@ Cartner, M. and Horvath, J. (Submitted). Intra-sentential code-switching at the 
 </p>
 
 <p> 
-Cartner, M. and Meltzer-Asscher, A. Gap prediction is not fully constrained by grammar: Hebrew Maze results. Talk at the 38th Annual Conference on Human Sentence Processing (HSP). University of Maryland, College Park, MD, USA. March 27-29, 2025. (<a href="PDF/Cartner_Meltzer-Asscher_2025_HSP_Refl-filler.pdf" target="_blank">slides</a>, <a href="https://drive.google.com/drive/folders/1Clonpl-3he6VETsEDdpqemqJ3iKncpfS" target="_blank">recording</a>)
+Cartner, M. and Meltzer-Asscher, A. Gap prediction is not fully constrained by grammar: Hebrew Maze results. Talk at the 38th Annual Conference on Human Sentence Processing (HSP). University of Maryland, College Park, MD, USA. March 27-29, 2025. (<a href="PDF/Cartner_Meltzer-Asscher_2025_HSP_Refl-filler.pdf" target="_blank">slides</a>, <a href="https://drive.google.com/file/d/17HfxQECI3ReNr2nQjhTx12yACpa_W9nD/view?usp=sharing" target="_blank">recording</a>)
 </p>
 
 <p>
@@ -85,31 +94,13 @@ Webster, N., Cartner, M., Kogan, M., Wagers, M., and Sichel, I. Information stru
 Cartner, M., Keshev, M., Lipitz, S., Dillon, B. and Meltzer-Asscher, A. Representational agreement attraction: Evidence from illusory feature conjunction in Hebrew. Talk at Architectures and Mechanisms for Language Processing 30 (AMLaP). Edinburgh, Scotland. September 5-7, 2024. (<a href="PDF/Cartner_et_al_2024_AMLaP_Attr.pdf" target="_blank">slides</a>)
 </p>
 
-<p>
-Keshev, M., Cartner, M., Meltzer-Asscher, A. and Dillon, B. A working memory model of sentence processing as binding morphemes to syntactic positions. Talk at the 46th Annual Meeting of the Cognitive Science Society (CogSci). Rotterdam, Netherlands. July 24-27, 2024. (<a href="PDF/CogSci_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">proceedings</a>)
-</p>
-
-<p>
-Keshev, M., Cartner, M., Meltzer-Asscher, A. and Dillon, B. A transient binding model of interference in sentence processing. Talk at the 37th Annual Conference on Human Sentence Processing (HSP). University of Michigan, Ann Arbor, MI, USA. May 16-18, 2024.
-</p>
-
-<p>
-Keshev, M., Cartner, M., Neal, A., Meltzer-Asscher, A., and Dillon, B. Dynamic encoding of agreement features and its effects on interference. Talk at the 35th Annual Conference on Human Sentence Processing (HSP). UC Santa Cruz, Santa Cruz, CA, USA. Mar 24-26, 2022. (<a href="PDF/Keshev_et_al_2022_Encoding_HSP.pdf" target="_blank">slides</a>)
-</p>
-
-
-<p>
-Keshev, M., Cartner, M. and Meltzer-Asscher, A. Processing multiple dependencies: Predicates and reflexive pronouns' agreement. Talk at the Crosslinguistic Perspectives on Processing and Learning workshop (X-PPL). University of Zürich, Switzerland. September 16-17, 2021.
-</p>
-
-<p>
-Keshev, M., Cartner, M. and Meltzer-Asscher, A. Processing multiple dependencies: Predicates' and reflexive pronouns' agreement features. Talk at the Linguistic Illusions in Sentence Processing workshop, University of Konstanz, Germany. September 13-14, 2021.
-</p>
-
-
-
 <br>
-<h2>Peer-Reviewed Posters</h2>
+
+<h2>Selected peer-reviewed posters</h2>
+
+<p>
+  Cartner, M. and Horvath, J. Intra-sentential code switching at the syntax-prosody interface. Poster at the 56th Annual Meeting of the North East Linguistics Society (NELS 56). New York University, New York, NY, USA. October 15-17, 2025. (<a href="PDF/Cartner_Horvath_2025_NELS_ICS.pdf" target="_blank">poster</a>)
+</p>
 
 <p>
   Cartner, M., Dillon, B., Meltzer-Asscher, A., and Keshev, M. Rational inference does not predict agreement errors: Gender vs number attraction in Hebrew comprehension. Poster at the 38th Annual Conference on Human Sentence Processing (HSP). University of Maryland, College Park, MD, USA. March 27-29, 2025. (<a href="PDF/Cartner_et_al_2025_HSP_num-gen.pdf" target="_blank">poster</a>)
@@ -117,15 +108,6 @@ Keshev, M., Cartner, M. and Meltzer-Asscher, A. Processing multiple dependencies
 
 <p>
 Kogan, M., Cartner, M., Webster, N., Wagers, M., and Sichel, I. Subject islands are not caused by information structure clashes: cross-constructional evidence. Poster at the 38th Annual Conference on Human Sentence Processing (HSP). University of Maryland, College Park, MD, USA. March 27-29, 2025. (<a href="PDF/Kogan_et_al_2025_HSP.pdf" target="_blank">poster</a>)
-</p>
-
-
-<p>
-Webster, N., Kogan, M., Cartner, M., Wagers, M. and Sichel, I. Subject islands are not caused by information structure clashes: Evidence from topicalization. Poster at Architectures and Mechanisms for Language Processing 30 (AMLaP). Edinburgh, Scotland. September 5-7, 2024. (<a href="PDF/Webster_et_al_2024_AMLaP_islands.pdf" target="_blank">poster</a>)
-</p>
-
-<p>
-Kogan, M., Cartner, M., Sichel, I., Toosarvandani, M., and Wagers, M. Canonical argument alignment modulates gap, but not RP, acceptability in English. Poster at the 37th Annual Conference on Human Sentence Processing (HSP). University of Michigan, Ann Arbor, MI, USA. May 16-18, 2024.
 </p>
 
 <p>
@@ -137,10 +119,6 @@ Cartner, M., Kishinevsky, E., Gidron, N. and Meltzer-Asscher, A. Competing struc
 </p>
 
 <p>
-Cartner, M., Kishinevsky, E., Gidron, N. and Meltzer-Asscher, A. Reflexive-antecedent search modulates gap formation: Evidence from Hebrew. Poster at the annual conference on Human Sentence Processing, University of Pittsburgh, Pittsburgh, PA, USA. March 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_Refl.pdf" target="_blank">poster</a>)
-</p>
-
-<p>
 Cartner, M. and Keshev, M. Optional resumption is used to overcome ambiguity in Hebrew. Poster at the 36th Annual Conference on Human Sentence Processing (HSP). University of Pittsburgh, Pittsburgh, PA, USA. March 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_NS.pdf" target="_blank">poster</a>)
 </p>
 
@@ -148,56 +126,6 @@ Cartner, M. and Keshev, M. Optional resumption is used to overcome ambiguity in 
 Cartner, M., Sichel, I., Toosarvandani, M. and Wagers, M. Predictive parsing as a source for resumptive pronoun preference in Hebrew. Poster at the 36th Annual Conference on Human Sentence Processing (HSP). University of Pittsburgh, Pittsburgh, PA, USA. March 9-11, 2023. (<a href="PDF/Cartner_et_al_2023_HSP_RP.pdf" target="_blank">poster</a>)
 </p>
 
-<p>
-Cartner, M., Sichel, I., Toosarvandani, M. and Wagers, M.  Tracing optionality to alignment in Hebrew RPs. Poster talk at the 35th annual conference on Human Sentence Processing (HSP). UC Santa Cruz, Santa Cruz, CA, USA. March 24-26, 2022. (<a href="PDF/Cartner_et_al_2022_HSP_RP.pdf" target="_blank">poster</a>)
-</p>
-
-
-
-<br>
-<h2>Other Presentations</h2>
-
-<p>Cartner, M. and Horvath, J. Intra-sentential code switching at the syntax-prosody interface. Talk given by Julia Horvath at the HUN-REN Hungarian Research Centre for Linguistics, Budapest, Hungary. May 27, 2025. 
-</p>
-
-<p>Cartner, M. Online dependency resolution given competing structural pressures: The case of fronted reflexives. Talk at the Linguistics Department Interdisciplinary Colloquium, Tel Aviv University, Tel Aviv, Israel. May 22, 2025.
-</p>
-
-<p> Cartner, M. The bilingual lexicon under Distributed Morphology: An Investigation of gender agreement in code-switching. Talk at the Linguistics Department Colloquium, The Hebrew University, Jerusalem, Israel. May 20, 2025.
-</p>
-
-<p> Cartner, M. Intra-sentential code-switching: Gender agreement. Talk at the Department of Hebrew Language and Sociolinguistics, Ben Gurion University of the Negev, Be'er Sheva, Israel. December 17, 2024.
-</p>
-
-<p> Cartner, M., Meltzer-Asscher, A., and Horvath, J. The bilingual lexicon under Distributed Morphology: An investigation of gender agreement in code-switching. Israel Association for Theoretical Linguistics workshop (IATL). Tel Aviv University, Tel Aviv, Israel. October 28, 2024. 
-</p>
-
-<p>
-Cartner, M., Wagers, M., Toosarvandani, M.  and Sichel, I. Amelioration by resumptive pronouns: Relating processing and acceptability. (Resumptive) Pronouns between grammar and processing, UC Santa Cruz, Santa Cruz, CA, USA. May 11, 2024.
-</p>
-
-<p>
-Sichel, I., Toosarvandani, M., Cartner, M., and Wagers, M. Animacy effects in object relativization and the theory of Agree. (Resumptive) Pronouns between grammar and processing, UC Santa Cruz, Santa Cruz, CA, USA. May 11, 2024.
-</p>
-
-<p>
-Cartner, M. Cataphora resolution along a filler-gap dependency: SPR vs. G-Maze. The Syntax, Semantics and Language Processing Lab, UC Santa Cruz, Santa Cruz, CA, USA. May 11, 2023.
-</p>
-
-<p>
-Cartner, M. Units of intra-sentential Code Switching and the modularity of grammar. The Department of Linguistics, University of Massachusetts Amherst, Amherst, MA, USA. March 29, 2023.</p>
-
-<p>
-Cartner, M. Lexical representations in bilingual grammar: Gender agreement in English-Hebrew Code Switching. The linguistics symposium in honor of the retirement of Prof. Mira Ariel, Prof. Outi Bat El and Prof. Julia Horvath, Tel-Aviv University, Tel Aviv, Israel, January 30, 2023.
-</p>
-
-<p>
-Cartner, M. Units of intra-sentential Code Switching and the modularity of grammar. The linguistics department Interdisciplinary Colloquium, Tel-Aviv University, Tel Aviv, Israel, January 12, 2023.
-</p>
-
-<p>
-Cartner, M., Meltzer-Asscher, A. and Horvath, J. Units of intra-sentential Code Switching and the architecture of grammar. The Syntax Workshop, Tel-Aviv University, Tel Aviv, Israel, July 5, 2022.
-</p>
 
 
 
