--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
-            <li><a href="PDF/Cartner_CV_Oct2025_web.pdf" target="_blank">CV</a></li>
+            <li><a href="PDF/Cartner_CV_web_Dec25.pdf" target="_blank">CV</a></li>
           </ul>
         </nav>
       </section>
@@ -37,17 +37,19 @@
 
 <h2>Journal articles</h2>
 
+
 <p>
-Keshev, M., Cartner, M., Meltzer-Asscher, A., and Dillon, B. (Under review). Representation distortion contributes to agreement attraction in comprehension.
+Keshev, M., Cartner, M., Meltzer-Asscher, A., and Dillon, B. (Undergoing revisions). Representation distortion contributes to agreement attraction in comprehension.
 </p>
 
 <p>
-  Cartner, M.*, Kogan, M.*, Webster, N.*, Wagers, M., and Sichel, I. (Under review). Subject islands do not reduce to construction-specific discourse function. (* = co-first authors) (<a href="PDF/Cartner_et_al_2025_Islands.pdf" target="_blank">Preprint</a>)
+  Cartner, M.*, Kogan, M.*, Webster, N.*, Wagers, M., and Sichel, I. (Undergoing revisions). Subject islands do not reduce to construction-specific discourse function. (* = co-first authors) (<a href="PDF/Cartner_et_al_2025_Islands.pdf" target="_blank">Preprint</a>)
 </p>
 
 <p>
   Cartner, M., Meltzer-Asscher, A., and Horvath, J. (Under review). Late insertion in code-switching: Evidence from gender agreement strategies of Hebrew-English bilinguals. 
 </p>
+
 
 <p>
   Keshev, M., Cartner, M., Meltzer‐Asscher, A., and Dillon, B. (2024). A working memory model of sentence processing as binding morphemes to syntactic positions. <em>Topics in Cognitive Science</em>. (<a href="PDF/TopiCS_2024_Keshev_Cartner_Meltzer-Asscher_Dillon.pdf" target="_blank">PDF</a>)
